# route-optimizer-backend

./: .gitignore  Cargo.toml  README.md  env.example
schema/: app_versions.sql  complete_schema.sql  indexes_and_triggers.sql  sample_app_versions.sql
src/: README.md  client.rs  main.rs  state.rs
src/analysis/: data_extractor.rs  delivery_classifier.rs  json_analyzer.rs  mod.rs
src/api/: analytics.rs  auth.rs  colis_prive.rs  colis_prive_router.rs  companies.rs  geocoding.rs  hybrid.rs  migration.rs  mod.rs  packages.rs  routers.rs  tournees.rs  update.rs  users.rs  vehicles.rs
src/cache/: auth_cache.rs  cache_config.rs  detail_cache.rs  mod.rs  redis_client.rs  tournee_cache.rs
src/clients/: colis_prive_client.rs  mod.rs
src/config/: database.rs  environment.rs  mod.rs
src/controllers/: address_controller.rs  auth_controller.rs  authorization_controller.rs  colis_prive_controller.rs  company_controller.rs  mapbox_optimization_controller.rs  mod.rs  tournee_cache_controller.rs  tournee_sync_controller.rs  vehicle_controller.rs
src/database/: connection.rs  mod.rs
src/dto/: address_dto.rs  auth_dto.rs  colis_prive_dto.rs  company_dto.rs  mapbox_optimization_dto.rs  mod.rs  vehicle_dto.rs
src/middleware/: auth.rs  auth_middleware.rs  cors.rs  mod.rs  rate_limit.rs
src/migration/: api.rs
src/models/: address.rs  analytics.rs  auth.rs  colis_prive_company.rs  colis_prive_web_models.rs  company.rs  mod.rs  package.rs  route.rs  tournee.rs  user.rs  vehicle.rs
src/repositories/: address_repository.rs  colis_prive_repository.rs  company_repository.rs  mod.rs  vehicle_repository.rs
src/routes/: address_routes.rs  auth_routes.rs  authorization_routes.rs  colis_prive_routes.rs  company_routes.rs  mapbox_optimization_routes.rs  mod.rs  package_routes.rs  tournee_cache_routes.rs  tournee_sync_routes.rs  vehicle_routes.rs
src/utils/: jwt.rs  (+3 more)
testing-tool/: Cargo.toml  README.md
testing-tool/src/: main.rs
tests/: README.md  api_tests.rs  colis_prive_integration.rs
tools/: README.md  analyze_json.rs  analyze_json_bin.rs  classify_deliveries.rs  optimize_extraction.rs
(+17 files in other folders)
